--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,12 @@ dependencies:
 #  jitsi_meeting_plus:
   jitsi_meet_wrapper: ^0.0.6
   http: ^0.13.6
+  flutter_svg: ^2.0.4
+  pin_code_fields:
+  shared_preferences: ^2.0.15
   fluttertoast: ^8.2.2
-
+  flutter_easyloading: ^3.0.5
+  elegant_notification: ^1.6.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -61,7 +65,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/img/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
