--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 #  jitsi_meeting_plus:
-  jitsi_meet_wrapper: ^0.0.6
+#  jitsi_meet_wrapper: ^0.0.6
   http: ^0.13.6
   flutter_svg: ^2.0.4
   pin_code_fields:
@@ -44,6 +44,8 @@ dependencies:
   fluttertoast: ^8.2.2
   flutter_easyloading: ^3.0.5
   elegant_notification: ^1.6.4
+  permission_handler: ^10.4.3
+  url_launcher: ^6.1.12
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,6 +69,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/img/
+    - assets/html/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
