--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/img/
-    - assets/html/
+#    - assets/html/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
