--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   elegant_notification: ^1.6.4
   permission_handler: ^10.4.3
   url_launcher: ^6.1.12
+  flutter_inappwebview: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
