--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,15 +9,18 @@
 <!--    <uses-permission android:name="android.permission.RECORD_AUDIO"/>-->
 <!--    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>-->
     <uses-permission android:name="android.permission.INTERNET"/>
-    <!--    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />-->
+<!--    <uses-permission android:name="android.permission.READ_MEDIA_*"/>-->
+<!--        <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />-->
     <!--    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />-->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera"/>
+<!--    <uses-permission android:name="android.permission.RECORD_AUDIO"/>-->
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"/>
+<!--    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>-->
+<!--    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"/>-->
+<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>-->
 
     <application
        tools:replace="android:label"
@@ -29,6 +32,18 @@
         android:fullBackupOnly="false"
         android:hasFragileUserData="false"
         android:usesCleartextTraffic="true">
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            tools:replace="android:authorities">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"
+                tools:replace="android:resource" />
+        </provider>
 
 <!--       <service-->
 <!--           android:name="org.jitsi.meet.sdk.ConnectionService"-->
