--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.videoconference.test_video_conference">
+    package="com.gcnt.ijmeet">
 <!--    android:name="${applicationName}"-->
 <!--    <uses-sdk tools:overrideLibrary="dev.saibotma.jitsi_meet_wrapper, org.jitsi.meet.sdk, co.apptailor.googlesignin, com.calendarevents, com.reactnativecommunity.asyncstorage, com.reactnativecommunity.netinfo, com.rnimmersive, com.corbt.keepawake, com.BV.LinearGradient, com.horcrux.svg, com.oney.WebRTCModule, com.ocetnik.timer, com.kevinresol.react_native_default_preference, com.learnium.RNDeviceInfo, com.amplitude.reactnative, com.reactnativegooglesignin, com.reactnativecommunity.clipboard, com.swmansion.gesturehandler.react, org.linusu, org.reactnative.maskedview, com.reactnativepagerview, com.oblador.performance, com.swmansion.reanimated, com.th3rdwave.safeareacontext, com.swmansion.rnscreens, com.reactnativecommunity.slider, org.devio.rn.splashscreen, com.brentvatne.react, com.reactnativecommunity.webview"/>-->
 <!--    <uses-permission android:name="android.permission.INTERNET"/>-->
@@ -25,8 +25,8 @@
     <application
        tools:replace="android:label"
        android:name="${applicationName}"
-        android:label="test_video_conference"
-        android:icon="@mipmap/ic_launcher"
+        android:label="برهان"
+        android:icon="@mipmap/app_icon"
         android:requestLegacyExternalStorage="true"
         android:allowBackup="false"
         android:fullBackupOnly="false"
