--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   get_it: ^7.2.0
   easy_localization: ^3.0.1
   dropdown_button2: ^2.0.0
+#  uqudosdk_flutter:
 dev_dependencies:
   flutter_test:
     sdk: flutter
