--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,13 +21,13 @@
 <!--    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"/>-->
 <!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
 <!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>-->
-
     <application
        tools:replace="android:label"
        android:name="${applicationName}"
         android:label="برهان"
         android:icon="@mipmap/app_icon"
         android:requestLegacyExternalStorage="true"
+        android:allowAudioPlaybackCapture="false"
         android:allowBackup="false"
         android:fullBackupOnly="false"
         android:hasFragileUserData="false"
@@ -74,6 +74,63 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
+
+        <!-- Deep links -->
+        <!-- Scheme+host filter -->
+<!--            https://blog.logrocket.com/-->
+<!--        <intent-filter>-->
+<!--            <action android:name="android.intent.action.VIEW" />-->
+<!--            <category android:name="android.intent.category.DEFAULT" />-->
+<!--            <category android:name="android.intent.category.BROWSABLE" />-->
+<!--            <data-->
+<!--                android:scheme="unilinks"-->
+<!--                android:host="example.com" />-->
+<!--        </intent-filter>-->
+        <!-- Scheme+host+pathPrefix filter -->
+<!--        <intent-filter>-->
+<!--            <action android:name="android.intent.action.VIEW" />-->
+<!--            <category android:name="android.intent.category.DEFAULT" />-->
+<!--            <category android:name="android.intent.category.BROWSABLE" />-->
+<!--            <data-->
+<!--                android:scheme="https"-->
+<!--                android:host="interrog.opp.gov.om"-->
+<!--                android:pathPrefix="/pjoin" />-->
+<!--        </intent-filter>-->
+            <meta-data android:name="flutter_deeplinking_enabled" android:value="true" />
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="http" android:host="interrog.opp.gov.om" />
+                <data android:scheme="https" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="http"/>
+                <data android:host="opp.ijmeet.com"  android:pathPrefix="/"/>
+                <data android:scheme="https" />
+            </intent-filter>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.VIEW" />-->
+<!--                <category android:name="android.intent.category.DEFAULT" />-->
+<!--                <category android:name="android.intent.category.BROWSABLE" />-->
+<!--                <data android:host="opp.ijmeet.com"-->
+<!--                    android:pathPrefix="/join"-->
+<!--                    android:scheme="https" />-->
+<!--            </intent-filter>-->
+        <!-- Scheme-only filter -->
+<!--        <intent-filter>-->
+<!--            <action android:name="android.intent.action.VIEW" />-->
+<!--            <category android:name="android.intent.category.DEFAULT" />-->
+<!--            <category android:name="android.intent.category.BROWSABLE" />-->
+<!--            <data android:scheme="unilinks" />-->
+<!--        </intent-filter>-->
+
+
+
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
