--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,8 +32,8 @@
         android:allowBackup="false"
         android:fullBackupOnly="false"
         android:hasFragileUserData="false"
-        android:usesCleartextTraffic="true">
-
+        >
+<!--        android:usesCleartextTraffic="true"-->
 <!--        <provider-->
 <!--            android:name="androidx.core.content.FileProvider"-->
 <!--            android:authorities="${applicationId}.fileProvider"-->
