--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         android:allowBackup="false"
         android:fullBackupOnly="false"
         android:hasFragileUserData="false"
+        android:usesCleartextTraffic="true"
         >
 <!--        android:usesCleartextTraffic="true"-->
 <!--        <provider-->
