--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,12 +50,12 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.conf.borhan"
+        applicationId "com.borh.borhan"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 23
-        targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
+        targetSdkVersion 34
+        versionCode 1
         versionName flutterVersionName
         multiDexEnabled true
     }
